--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://islam4049.github.io/employee-directory",
+  "homepage": "https://islam4049.github.io/employee-directory/",
   "name": "employee-directory",
   "version": "0.1.0",
   "private": true,
