--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://islam4049.github.io/employee-directory/",
   "name": "employee-directory",
+  "homepage": "https://islam4049.github.io/employee-directory/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.2",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.28",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-moment": "^1.1.1",
